app-httpd-v1.yaml
apiVersion: app/v1
kind: Deployment
metadata:
  name: apache-webserver
spec:
  selector: 
    matchLabels: 
      app: apache-webserver
  replicas: 4
  template:
    metadata:
      labels:
        app: apache
    spec:
      containers:
        - name: apache
          image: httpd
          ports:
            - containerPort: 80
