cic-httpd-v1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: httpd-cic
  labels:
    app: httpd-cic
spec:
      serviceAccountName: cpx
      containers:
      - name: httpd-cic
        image: "quay.io/citrix/citrix-k8s-ingress-controller:1.1.3"
        args:
          - --ingress-classes
            vpx
          - --feature-node-watch
            false
        imagePullPolicy: IfNotPresent
