service-httpd-uni-v1.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpd-service
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 80
  selector:
    app: apache-webserver
